--- a/src/app/layout/blog/blog.component.scss
+++ b/src/app/layout/blog/blog.component.scss
@@ -35,9 +35,10 @@
 .heading-product h1 {
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 28px;
 }
+
 .heading-product h5 {
     font-weight: 900;
     font-family: "Open Sans", sans-serif;
@@ -45,7 +46,7 @@
 }
 .heading-product p {
     font-family: "Open Sans", sans-serif;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 25px;
     letter-spacing: 0.2px;
 }
@@ -75,4 +76,60 @@ section.home.amazonhome2 .img-product a {
 
 .ft{
     margin: 0 auto;
+}
+.price {
+    padding: 4px 10px 4px 0px;
+    font-family: inter;
+    font-weight: 500;
+    color: #45d7eb;
+    font-size: 12px;
+}
+
+.price u {
+    text-decoration: line-through;
+    color: #999696;
+}
+
+.star {
+    align-items: center;
+}
+
+.star mat-icon {
+    width: auto;
+    color: #ffc400;
+    font-size: 11px;
+    margin: 1px;
+    position: relative;
+    top: 0px;
+    height: auto;
+}
+.viewer b {
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    font-weight: 500;
+    color: #c2bdbd;
+}
+.reviewviewicon .viewer {
+    display: flex;
+    align-items: center;
+    padding: 2px 0 10px;
+}
+.reviewviewicon mat-icon {
+    font-size: 14px;
+    height: auto;
+    position: relative;
+    top: 0.5px;
+    color: #fcd68f;
+    width: 19px;
+}
+
+
+
+
+section.home.amazonhome1 .heading-product {
+    padding-left: 5px;
+}
+section.home.amazonhome1 .heading-product h1 {
+    font-size: 14px;
+    line-height: 22px;
 }
