--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -93,6 +93,15 @@ mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
     left: -18px;
     top: 13px;
 }
+.addto-cart {
+    place-content: center;
+    margin: 20px 0px 0;
+    
+}
+
+
+
+
 .iconmore mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color {
     color: #fff;
     top: 0 !important;
@@ -131,7 +140,7 @@ mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
 }
 .product-amazon {
     box-shadow: 1px 1px 6px 0px #ddd;
-    padding: 2pc 0pc;
+    padding: 2pc 0pc 0.5pc;
     background: #fff;
     border-radius: 6px;
     width: 31%;
@@ -140,8 +149,8 @@ mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
 .addto-cart button {
     border: 0;
     background: #4571eb;
-    padding: 11px 1.5pc 11px;
-    border-radius: 27px;
+    padding: 12px 2.1pc 13px;
+    border-radius: 4px;
     color: #fff;
     font-family: "Open Sans", sans-serif;
     margin: 0px 0 15px;
@@ -149,9 +158,13 @@ mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
     display: flex;
     cursor: pointer;
     align-items: center;
-    margin: 0 auto;
+    margin: 5px;
     font-weight: 500;
 }
+.addto-cart button span:hover {
+    text-decoration: underline;
+}
+
 .addto-cart button mat-icon{
     font-size: 14px;
     height: auto;
@@ -242,6 +255,12 @@ section.home.amazonhome2 .product-amazon{
     width: 46%;
     margin: 9px;
 }
+section.home.amazonhome2 .addto-cart button {
+    padding: 12px 14px 13px;
+}
+section.home.amazonhome3 .addto-cart button {
+    padding: 12px 14px 13px;
+}
 section.home.amazonhome1 .img a {
     height: 100%;
     /* width: 200px; */
@@ -260,4 +279,17 @@ section.home.amazonhome3  .text {
 
 .ft{
     margin: 0 auto;
+}
+
+.addto-cart {
+    place-content: center;
+    margin: 20px 0px 0;
+}
+.blog-detail {
+    padding: 10px 0;
+    text-align: center;
+    font-size: 10px;
+    color: #00cb89;
+    font-family: inter;
+    cursor: pointer;
 }
