--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -692,22 +692,19 @@
                             <mat-icon>date_range</mat-icon>FEB 17,2020
                         </h6>
                     </div>
-                    <h1> Amazon Fashion Shopping</h1>
+                    <h1> Amazon Fashion Shopping <br/> &nbsp;</h1>
                     <p> Upto 60% off - Top Brands - Jackets, Shirts, Dresses & formal wear, western wear, nightwear and
                         lingerie.
                         Get addition discounts on Slected cards.
                         Buy now! Easy & Fast Delivery. No Cost EMI Available. Best Deals.</p>
 
-                    <a target="_blank"
-                        href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
-                        Read More
-                        <mat-icon>arrow_right_alt
-                        </mat-icon>
-                    </a>
+                    <a target="_blank" href="https://www.amazon.in/gp/bestsellers/apparel?_encoding=UTF8&linkCode=ib1&tag=stackasian-21&linkId=07d4225b3d4856f46549a58179aecedf&ref_=ihub_curatedcontent_c71318f9-d59d-4bc1-bc5a-6fdf0c0257fc">
+                        Read More <mat-icon>arrow_right_alt</mat-icon></a>
+                        
 
                 </div>
                 <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                        <div class="blog-img2"></div>
+                    <div class="blog-img2"></div>
                     <div class="date" fxLayout="row">
                         <h6>
                             <mat-icon>person</mat-icon>By Admin
@@ -716,10 +713,19 @@
                             <mat-icon>date_range</mat-icon>May 4,2019
                         </h6>
                     </div>
-                    <h1>Sony WF-XB700 Truly Wireless Extra Bass Bluetooth Earbuds with 18 Hours Battery Life, True
-                        Wireless Earbuds with Mic for Phone Calls, Quick Charge, BT Ver 5.0 (Black)
+                    <h1>Sony WF-XB700 Truly Wireless Extra Bass Bluetooth Earbuds with 18 Hours Battery Life
                     </h1>
-                    <p>Additional Bass: WF-XB700 includes EXTRA BASS for genuinely ground-breaking, punchy low-end
+
+                    <!-- Bluetooth Earbuds with 18 Hours Battery Life, True
+                        Wireless Earbuds with Mic for Phone Calls, Quick Charge, BT Ver 5.0 (Black)
+                    </h1> -->
+                        <p>Additional Bass: WF-XB700 includes EXTRA BASS for genuinely ground-breaking, punchy low-end
+                            sound. Your most loved basslines never sounded so great with 12mm driver unit
+
+                            Water Resistant: With an IPX4 water opposition rating,
+
+                        </p>
+                        <!-- <p>Additional Bass: WF-XB700 includes EXTRA BASS for genuinely ground-breaking, punchy low-end
                         sound. Your most loved basslines never sounded so great with 12mm driver unit
 
                         Water Resistant: With an IPX4 water opposition rating, sprinkles and sweat will not stop these
@@ -745,12 +751,12 @@
                         underlying receiver. No compelling reason to try and take your telephone from your pocket
 
                         Google Assistant/Siri: A straightforward catch press interfaces you to your cell phone's Voice
-                        Assistant to get headings, play music and speak with contacts.</p>
-                    <a>Read More <mat-icon>arrow_right_alt
-                        </mat-icon></a>
+                        Assistant to get headings, play music and speak with contacts.</p> -->
+                        <a>Read More <mat-icon>arrow_right_alt
+                            </mat-icon></a>
                 </div>
                 <div class="blog-featured" fxLayout="column" fxFlex="33%">
-                        <div class="blog-img3"></div>
+                    <div class="blog-img3"></div>
 
                     <div class="date" fxLayout="row">
                         <h6>
@@ -760,6 +766,7 @@
                             <mat-icon>date_range</mat-icon>May 4,2019
                         </h6>
                     </div>
+                    <!-- <h1>The Review Stackasian Center Shooping News and weekly shooper</h1> -->
                     <h1>The Review Stackasian Center Shooping News and weekly shooper</h1>
                     <p> A Review Tool helps in finding the best item in the MarketPlace.</p>
                     <a>Read More <mat-icon>arrow_right_alt
@@ -767,7 +774,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </div>
 </section>
@@ -1174,7 +1181,7 @@
                 orientation="ltr">
                 <mat-carousel-slide #matCarouselSlide *ngFor="let slide of slides; let i = index">
                     <div class="blog-featured" fxLayout="column">
-                            <div class="blog-img1"></div>
+                        <div class="blog-img1"></div>
 
                         <div class="date" fxLayout="row">
                             <h6>
