--- a/src/app/layout/full-view/full-view.component.scss
+++ b/src/app/layout/full-view/full-view.component.scss
@@ -5,7 +5,9 @@
     width: 100%;
     height: 55px;
 }
-
+.category{
+    min-height: 100vh;
+}
 .top-line {
     margin: 0 auto;
 }
@@ -200,7 +202,6 @@
     font-family: "Open Sans", sans-serif;
     font-size: 12px;
     font-weight: 600;
-    width: 30%;
 
 }
 .item-ad {
