--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -22,8 +22,8 @@
                             <button mat-menu-item [routerLink]="'/category/refined-oil'">
                                 <mat-icon>keyboard_arrow_left</mat-icon>refined oil
                             </button>
-                            <button mat-menu-item>
-                                <mat-icon>keyboard_arrow_left</mat-icon>Amazon Devices
+                            <button mat-menu-item [routerLink]="'/category/computer-monitor'">
+                                <mat-icon>keyboard_arrow_left</mat-icon> lcd/led monitor
                             </button>
                             <button mat-menu-item>
                                 <mat-icon>keyboard_arrow_left</mat-icon>Amazon Fashion
