--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -1,7 +1,7 @@
 section.amazonheader {
     padding:0px 6px 0px 6px;
     background:linear-gradient(45deg, #c4efe4, #c5f0e5);
-
+    background:#000
 }
 .header {
     margin: auto;
@@ -18,7 +18,6 @@ section.amazonheader {
     font-family: "Open Sans", sans-serif;
 }
 .menu button {
-    background: white;
     border: 0;
     text-align: start;
     color: #5e5d5d;
@@ -29,48 +28,52 @@ section.amazonheader {
     font-family: inter;
     font-size: 13px;
     width: 100%;
-    height: 45px;
+    height: 37px;
     font-family: "Open Sans", sans-serif;
-    border-radius: 40px 0 0 40px;
+    border-radius: 5px 0 0 5px;
 }
 .search .menu button mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
     position: relative;
     padding: 0;
     top:0px;
     left: 10px;
+    color: #555554 !important;
 }
 .menu button span mat-icon {
     position: relative;
     padding: 0;
     top: 12px;
-    left: 10px;
+    left: 20px;
     float: right;
 }
 ::ng-deep .menu button span.mat-button-wrapper{
     width: 100%;
     font-size: 13px;
-    color: #a8a4a2;
+    color: #555554;
+    font-weight: 400;
+    font-family: "Cabin", sans-serif;
+
 }
 .search {
     border: 1px solid #ddd;
     background: #ffffff;
-    border-radius: 40px ;
+    border-radius: 5px ;
 }
 .menu {
-    background: #ffffff;
-    height: 45px;
+    background: #f8f8f8;
+    height: 37px;
     border-right: 1px solid #ddd;
-    border-radius: 40px 0px 0px 40px;
+    border-radius: 5px 0px 0px 5px;
 }
 .search form{
-    height: 45px;
+    height: 37px;
     display: flex;
 }
 .search input {
     width: 90%;
     border: 0;
     padding: 0px 0pc 0 1pc;
-    height: 45px;
+    height: 37px;
     position: relative;
     top: 1px;
     font-family: "Open Sans", sans-serif;
@@ -79,8 +82,8 @@ section.amazonheader {
 .search mat-icon.mat-icon {
     
     font-size: 14px;
-    height: 45px;
-    line-height: 45px;
+    height: 37px;
+    line-height: 37px;
     padding: 0px 1px;
     color: #b2aaa5 !important;
 }
@@ -137,7 +140,7 @@ form.example-form mat-icon.mat-icon {
 }
 .menus ul li {
     font-size: 12px;
-    color: #010101;
+    color: #fff;
     font-family: "Open Sans", sans-serif;
     padding: 0px 1pc;
     cursor: pointer;
@@ -192,8 +195,9 @@ ul li span {
     padding: 0px 0pc;
 }
 .top-head {
-    background: linear-gradient(45deg, #c4efe4, #bce2d0);
+    // background: linear-gradient(45deg, #c4efe4, #bce2d0);
     padding:0.5pc 0 0.5pc;
+    background: #000;
 }
 .menus ul li img {
     width: 34px;
@@ -229,6 +233,10 @@ ul li span {
 }
 .example-sidenav-content {
     flex-direction: column;
+}
+
+.example-sidenav-content button mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
+    color: #fff;
 }
 section.amazonheader.amazonheader2 .mobile-haeder .search{
     width: 100%;
@@ -273,7 +281,9 @@ section.amazonheader.amazonheader3 .menus ul {
 .mobile-haeder .menus {
     place-content: flex-end;
     display: flex;
-    align-items: center;
+    align-items: start;
+    position: relative;
+    top: 6px;
 }
 
 @media screen and (min-width: 220px) and (max-width: 400px) {
@@ -282,7 +292,12 @@ section.amazonheader.amazonheader3 .menus ul {
 }
 }
 .amazonheader1 .logo img {
-width: 55%;
-display: block;
-margin: 0 auto;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: -2px;
 }
+
+
+
