--- a/src/app/layout/full-view/full-view.component.scss
+++ b/src/app/layout/full-view/full-view.component.scss
@@ -5,6 +5,11 @@
     width: 100%;
     height: 55px;
 }
+.ft{
+    min-height: 100vh;
+    padding: 15pc 0 0;
+
+}
 .category{
     min-height: 100vh;
 }
