--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -7,7 +7,7 @@
                 <div class="logo" fxFlex="23%">
                     <!-- <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a> -->
 
-                   <span routerLink="/"> <img src="/assets/images/logo.png"></span>
+                   <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
                 </div>
                 <div class="search" fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row"
                     fxLayoutAlign="start center">
@@ -305,13 +305,13 @@
                             </div>
                             <div class="logo" fxFlex="60%"  fxFlex.sm="70%">
                                 <!-- <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a> -->
-                                <span routerLink="/"> <img src="/assets/images/logo.png"></span>
+                                <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
 
                             </div>
                             <div class="menus" fxFlex="20%" fxFlex.sm="20%">
                                 <ul>
                                     <li routerLink="/review">
-                                        <img src="https://www.flaticon.com/premium-icon/icons/svg/1031/1031846.svg">
+                                        <img src="/assets/images/review-icon.png">
                                     </li>
                                 </ul>
                             </div>
