--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -5,6 +5,11 @@
     width: 100%;
     height: 55px;
 }
+.ft{
+    min-height: 100vh;
+    padding: 15pc 0 0;
+
+}
 section.home {
     min-height: 100vh;
 }
@@ -288,8 +293,10 @@ section.home.amazonhome3  .text {
 .blog-detail {
     padding: 10px 0;
     text-align: center;
-    font-size: 10px;
+    font-size: 13px;
     color: #00cb89;
     font-family: inter;
     cursor: pointer;
+    letter-spacing: 0.4px;
+    font-family: "Cabin", sans-serif;
 }
