--- a/src/app/layout/full-view/full-view.component.html
+++ b/src/app/layout/full-view/full-view.component.html
@@ -49,7 +49,7 @@
 
                             <div class="item-ad">
                                 <div class="heading" *ngFor="let allpros of product.allPros">
-                                    <b> {{allpros.pros}}</b>
+                                    <b>- {{allpros.pros}}</b>
                                 </div>
                              
                             </div>
