--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -6,14 +6,13 @@
             <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutAlign="start center" fxFlex="100%">
                 <div class="logo" fxFlex="23%">
                     <!-- <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a> -->
-
                    <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
                 </div>
                 <div class="search" fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row"
                     fxLayoutAlign="start center">
                     <div class="menu" fxFlex="22%" fxFlex.xs="33%" fxFlex.sm="35%">
                         <button class="allcates" mat-button [matMenuTriggerFor]="menu">
-                            All Category <mat-icon>keyboard_arrow_down</mat-icon>
+                            All Category<mat-icon>keyboard_arrow_down</mat-icon>
                         </button>
                         <mat-menu #menu="matMenu" class="menu_category">
                             <button mat-menu-item [routerLink]="'/category/mobiles'">
@@ -153,7 +152,8 @@
                 <div class="menus" fxFlex="27%">
                     <ul>
                         <li><span routerLink="/login">Login</span> / <span routerLink="/register">Register</span></li>
-                        <li routerLink="/review"><button>Write Review</button> </li>
+                        <li routerLink="/review">
+                            <button>Write Review</button> </li>
                     </ul>
                 </div>
             </div>
