--- a/src/app/layout/auth/header/header.component.html
+++ b/src/app/layout/auth/header/header.component.html
@@ -6,7 +6,7 @@
             <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxLayoutAlign="start center" fxFlex="100%">
                 <div class="logo" fxFlex="23%">
                     <!-- <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a> -->
-                   <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
+                    <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
                 </div>
                 <div class="search" fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row"
                     fxLayoutAlign="start center">
@@ -143,8 +143,10 @@
                         <mat-icon>search</mat-icon>
 
                         <mat-autocomplete #auto="matAutocomplete">
-                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                {{option}}
+                            <mat-option *ngFor="let option of options" [value]="option">
+                                <button mat-menu-item [routerLink]="'/category/mobiles'">
+                                    <mat-icon>keyboard_arrow_left</mat-icon>{{option.name}}
+                                </button>
                             </mat-option>
                         </mat-autocomplete>
                     </form>
@@ -153,7 +155,8 @@
                     <ul>
                         <li><span routerLink="/login">Login</span> / <span routerLink="/register">Register</span></li>
                         <li routerLink="/review">
-                            <button>Write Review</button> </li>
+                            <button>Write Review</button>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -303,7 +306,7 @@
                                     <mat-icon>menu</mat-icon>
                                 </button>
                             </div>
-                            <div class="logo" fxFlex="60%"  fxFlex.sm="70%">
+                            <div class="logo" fxFlex="60%" fxFlex.sm="70%">
                                 <!-- <a routerLink="/"> <b>Reviews</b><br /><span>Stackasian</span></a> -->
                                 <span routerLink="/"> <img src="/assets/images/logoo.png"></span>
 
@@ -324,7 +327,9 @@
                                     [formControl]="myControl" [matAutocomplete]="auto">
                                 <mat-autocomplete #auto="matAutocomplete">
                                     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                        {{option}}
+                                        <button mat-menu-item [routerLink]="'/category/mobiles'">
+                                            <mat-icon>keyboard_arrow_left</mat-icon>{{option}}
+                                        </button>
                                     </mat-option>
                                 </mat-autocomplete>
                             </form>
